# codecov-demo

./: README.md  codecov.yml  pyproject.toml
.github/workflows/: api.yml  frontend.yml
api/: requirements.txt
web/: package-lock.json
web/static/js/: calculator.test.js
